--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
             <div class="newsletter-content">
                 <h3 class="newsletter-title">
                     <span class="newsletter-icon">📧</span>
-                    Newsletter TechVeille
+                    Newsletter Kyrostech
                 </h3>
                 <p class="newsletter-description">
                     Recevez un résumé hebdomadaire des meilleurs articles tech directement dans votre boîte mail
