--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,12 @@
+<head>
+    <title>{{ .Title }} - {{ .Site.Title }}</title>
+    <meta name="description" content="{{ .Description | default .Summary }}">
+    <meta property="og:title" content="{{ .Title }}">
+    <meta property="og:description" content="{{ .Description | default .Summary }}">
+    <meta property="og:image" content="{{ .Permalink }}images/cover.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+  </head>
+
 {{ define "main" }}
 <article class="single-article">
     <!-- Article Header -->
