--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="{{ .Permalink }}images/logo.png">
     <meta name="twitter:card" content="summary_large_image">
     <!-- Styles -->
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/css/style.css">
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
     {{ block "head" . }}{{ end }}
 </head>
 <body>
