--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ .Title }} - {{ .Site.Title }}</title>
   <!-- Styles (à adapter selon ton SCSS) -->
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/css/style.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
 </head>
 <body>
   <header class="site-header">
